# Slider

./: CHANGELOG.md  Instructions.md  README.md  release-ghcr.yml  release_notes.md
Slider_Day1_Workshop/: README.md  step_1_install.md  step_2_hello.md  step_3_edit.md  step_4_acs.md  step_5_ffi.md  verify.py
Slider_Full_Package/: landing_clean.md  landing_dark.html
slider-repo/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
slider-repo/containers/: Dockerfile
slider-repo/docs/: acs.md  ffi.md  getting-started.md  index.md  language.md  optimization.md  security.md  style.md
slider-repo/examples/: demo_acs_v1.sdr  hello.sdr
slider-repo/examples/cdeps/: add.c  add.h
slider-repo/runtime/: README.md  acs_v1.c  acs_v1.h
slider-repo/sdrc/: ast.py  driver.py  irgen.py  lexer.py  parser.py  tokens.py  typesys.py
slider-repo/std/: checksum.sdr.md  fmt.sdr.md  math.sdr.md  regex.sdr.md  time.sdr.md
slider_repo_patch_suet_and_ghcr/: LICENSE
slider_repo_patch_suet_and_ghcr/scripts/: add_signature.py
